--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 * {
     box-sizing: border-box;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body {
+    font-family: "Roboto", sans-serif;
+
+}
+
+header, footer {
+    background-color: #1F2937;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+#hero-section {
+    background-color: #1F2937;
+}
+
+#hero-section > p, .nav-link {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+#logo {
+    color: #F9FAF8;
+    font-size: 24px;
+}
+
+button {
+    color: #3882F6;
+}
+
+.cta-container {
+    background-color: #3882F6;
+}
+
+blockquote {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-weight: 100;
+    font-style: italic;
+    font-size: 36px;
+}
