--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
-
+    margin: 0;
 }
 
 header, footer {
@@ -31,6 +31,7 @@ h1 {
 #logo {
     color: #F9FAF8;
     font-size: 24px;
+    font-weight: 900;
 }
 
 button {
@@ -47,4 +48,23 @@ blockquote {
     font-weight: 100;
     font-style: italic;
     font-size: 36px;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+}
+
+nav > ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.nav-link {
+    text-decoration: none;
 }
