--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 10px;
+    padding: 24px;
 }
 
 nav > ul {
@@ -63,6 +63,8 @@ nav > ul {
     justify-content: center;
     align-items: center;
     gap: 16px;
+    padding: 0;
+    margin: 0;
 }
 
 .nav-link {
