--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     box-sizing: border-box;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
     font-family: "Roboto", sans-serif;
@@ -93,4 +93,45 @@ nav > ul {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#info-section {
+    background-color: #fff;
+    padding: 50px;
+}
+
+#info-section > h2 {
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 36px;
+}
+
+h2 {
+    margin: 0;
+}
+
+.info-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 16px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 180px;
+    gap: 8px;
+}
+
+.info-text {
+    text-align: center;
+}
+
+.picture {
+    width: 120px;
+    height: 120px;
+    border: 3px solid #3882F6;
+    border-radius: 6px;
 }
