--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ h1 {
     cursor: pointer;
 }
 
+button {
+    cursor: pointer;
+}
+
 .cta-container {
     background-color: #3882F6;
 }
@@ -115,7 +119,7 @@ nav > ul {
     margin-bottom: 36px;
 }
 
-h2 {
+h2, h3 {
     margin: 0;
 }
 
@@ -157,4 +161,35 @@ h2 {
 .credit {
     font-size: 0.75em;
     font-weight: 900;
+}
+
+#cta-section {
+    background-color: #fff;
+    padding: 50px;
+}
+
+.cta-container {
+    width: 75%;
+    margin: 16px auto;
+    padding: 25px 160px;
+    border-radius: 6px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.25rem;
+}
+
+#cta-heading {
+    margin-bottom: 8px;
+}
+
+#cta-button {
+    padding: 12px;
+    font-size: 1rem;
+    font-weight: 900;
+    border: 3px solid #fff;
+    color: #fff;
+    background-color: transparent;
+    border-radius: 6px;
 }
