--- a/style.css
+++ b/style.css
@@ -193,3 +193,9 @@ h2, h3 {
     background-color: transparent;
     border-radius: 6px;
 }
+
+footer {
+    color: #E5E7EB;
+    padding: 25px;
+    text-align: center;
+}
